--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
             </div>          
             <div class="contact">
                <div class="lala"> 
-                   <img src="./img/logoGmail.png"  width="3%" alt="LOGO GMAIL">
+                   <img src="./img/logoGmail.png"  width="60px" alt="LOGO GMAIL">
                    <p class="contactlogo"> r.toutain@gmail.com </p>
                 </div>
                 <div class="lala">
-                    <img src="./img/linkedin.png" width="3%" height="3%" alt="LOGO LINKED IN">
+                    <img src="./img/linkedin.png" width="60px" alt="LOGO LINKED IN">
                     <p class="contactlogo">  <a class="textalign" href="http://www.linkedin.com/in/romain-toutain-79046b224">romain-toutain</a> </p> 
                 </div>
                 <div class="lala">
-                    <img src="./img/github (2).png" width="3%" alt="LOGO GIT HUB">
+                    <img src="./img/github (2).png" width="65px" alt="LOGO GIT HUB">
                     <p class="contactlogo"><a class="textalign" href="https://github.com/Chycha13">Chycha13</a></p>
                 </div>
             </div>    
