--- a/projets.html
+++ b/projets.html
@@ -9,29 +9,26 @@
 </head>
 <body>
     <header class="header">
-        <div class="bouttonPosition"><a href="parcours.html"><button class="bouttonStyle"> EXPERIENCES </button></a></div>    
+        <div class="bouttonPosition"><a href="index.html"><button class="bouttonStyle"> ACCUEIL </button></a></div>    
          <canvas></canvas>
-        <div class="bouttonPosition"><a href="#"><button  class="bouttonStyle">PROJETS </button></a></div>
+        <div class="bouttonPosition"><a href="parcours.html"><button  class="bouttonStyle">EXPERIENCES</button></a></div>
     </header>
     <main class="placement">
-        <div class="card-container">
-            <div >
-                <img src="./img/sql.png "width="40%" alt="">
+            <div class="carte">
+               <a class="deco" href="https://github.com/Chycha13/fauxbook"> <img id="bordure" src="./img/Sans titre.png" width="380px" alt=""></a>
             </div>
-        </div>
-        <div class="card-container">
-            <img src="./img/HTML.png" alt="">
-        </div> 
+            <div class="carte2">
+               <a class="deco"  href="https://github.com/Chycha13/site-verti"><img id="bordure2" src="./img/screen verti.png" width="380px" alt=""></a> 
+            </div>      
     </main>
     <main2 class="placement">
-
-        <div class="card-container">
-            <img src="./img/HTML.png" alt="">
+        <div class="carte3">
+            <a class="deco"  href="https://github.com/Chycha13/AnimeShop"><img id="bordure" src="./img/animeshop.png" width="380px" alt=""></a>
         </div>
-        <div class="card-container">
-            <img src="./img/HTML.png" alt="">
-        </div>
-       
+        <div class="carte4">
+            <img id="bordure2" src="./img/NW.png" width="380px" alt="">
+        </div> 
+    
     </main2>
     <script src="portfolio.js"></script>
 </body>
