--- a/projets.html
+++ b/projets.html
@@ -15,18 +15,18 @@
     </header>
     <main class="placement">
             <div class="carte">
-               <a class="deco" href="https://github.com/Chycha13/fauxbook"> <img id="bordure" src="./img/Sans titre.png" width="380px" alt=""></a>
+              <a href="https://github.com/Chycha13/Generateur-js"> <img src="./img/generateurGroupe.png" href="https://github.com/Chycha13/Generateur-js" width="380px"></a>
             </div>
             <div class="carte2">
-               <a class="deco"  href="https://github.com/Chycha13/site-verti"><img id="bordure2" src="./img/screen verti.png" width="380px" alt=""></a> 
+              <a href="https://github.com/Chycha13/site-verti"> <img id="bordure2" src="./img/screen verti.png"  width="380px"></a>
             </div>      
     </main>
     <main2 class="placement">
         <div class="carte3">
-            <a class="deco"  href="https://github.com/Chycha13/AnimeShop"><img id="bordure" src="./img/animeshop.png" width="380px" alt=""></a>
+          <a href="https://github.com/Chycha13/AnimeShop"> <img src="./img/animeshop.png" width="380px" > </a>
         </div>
         <div class="carte4">
-            <img id="bordure2" src="./img/NW.png" width="380px" alt="">
+           <a href="https://github.com/Chycha13/fauxbook"> <img src="./img/fauxbook.png" width="380px" ></a>
         </div> 
     
     </main2>
